fixing the footer spacing between the logo and contact me on mobile.

--- a/app/assets/styles/modules/layouts/_footer.css
+++ b/app/assets/styles/modules/layouts/_footer.css
@@ -13,11 +13,7 @@
   &__logo {
     width: 120px;
     height: 120px;
-    margin-right: .5em;
-
-    @mixin atMedium {
-      margin-right: 2em;
-    }
+    margin-right: 3em;
   }
   &__intro {
     display: none;
